# N-Body-Simulations

./: README.md  install_dependencies.sh  run_simulation.sh
Aux/: aux.c
Graphics/: .gitignore  Cargo.toml  create_mp4.sh
Graphics/shaders/: simple.frag  simple.vert
Graphics/src/: main.rs  mesh.rs  scene_graph.rs  shader.rs  util.rs
Metodo_Directo/: .gitignore  main.c  main.cpp  makefile  run_metodo_directo.sh  run_simulation.sh  simulation.h  simulation_OpenMP_new  simulation_secuencial_new
Paralelo_Ingenuo/: makefile  run_simulation.sh
Plots/: .gitignore  check_and_plot.sh  create_plots.sh  create_plots_cuda.sh  create_plots_openMP.sh  create_shm_directory.sh  load  makefile  plot_all.sh  simulation_secuencial_new  time_simulations.c  time_simulations_OpenMP  time_simulations_cuda  time_simulations_cuda.cpp  time_simulations_new.c  time_simulations_openmp_new  time_simulations_secuencial  time_simulations_secuencial_new  time_til_N_seconds.c  time_til_N_seconds_cuda.cpp  time_til_N_seconds_treecode.sh  time_treecode.c  time_treecode.sh  times.p
Secuencial_Ingenuo/: main  makefile  prueba.py  run_simulation.sh
Solucion_Ingenua/: makefile  run_simulation.sh  run_simulation_OpenMP.sh  run_simulation_cuda.sh  run_simulation_cuda_OpenMP.sh  run_simulation_secuential.sh  simulation_cuda  simulation_cuda_OpenMP
Starting_Configurations/: .gitignore  csv_to_binary.c  double_sphere_starting_configuration  double_sphere_starting_configuration.c  draw_all.sh  galaxy_style_configuration  galaxy_style_configuration.c  graphic_starting_position.c  makefile  (+6 more)
(+101 files in other folders)
