[package]
name = "N-Body-Simulation"
version = "0.1.0"
authors = [
    "Santiago Salas <santiago.salas@estudiante.uam.es>"
]
edition = "2018" # rust edition

[dependencies]
glutin = "0.29.1"
gl = "0.14.0"
tobj = "3.1.0"
image = "0.24.3"
nalgebra-glm = "0.17.0"
rand = "0.8.4"
libc = "0.2.132"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
